--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <html>
 <head>
     <meta charset="utf-8">
+
+</head>
+<body>
+    <canvas id="gameWorld" tabindex="1" width="800" height="800" style="border: 1px solid brown; background: rgb(120, 154, 158)"></canvas>
+    <br />
+    <b>ANOTHER</b> game of life implementation<br />
     <title>Game Project Shell</title>
     <script type="text/javascript" src="./mapData.js"></script>
     <script type="text/javascript" src="./gameengine.js"></script>
     <script type="text/javascript" src="./map.js"></script>
     <script type="text/javascript" src="./assetmanager.js"></script>
     <script type="text/javascript" src="./main.js"></script>
-</head>
-<body>
-    <canvas id="gameWorld" tabindex="1" width="800" height="800" style="border: 1px solid brown; background: gray"></canvas>
-    <br />
-    <b>ANOTHER</b> game of life implementation<br />
-
+    <script type="text/javascript" src="./unit.js"></script>
 </body>
 </html>
