--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <canvas id="gameWorld" tabindex="1" width="800" height="800" style="border: 1px solid brown; background: rgb(120, 154, 158)"></canvas>
     <br />
     <b>ANOTHER</b> game of life implementation<br />
+    <select id="toolSelect">
+    <option value="1">One</option>
+    <option value="2">Two</option>
+    </select>
     <title>Game Project Shell</title>
     <script type="text/javascript" src="./mapData.js"></script>
     <script type="text/javascript" src="./gameengine.js"></script>
