--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <option value="1">One</option>
     <option value="2">Two</option>
     </select>
+    <input type="button" id="toggle" value="Start">
     <title>Game Project Shell</title>
     <script type="text/javascript" src="./mapData.js"></script>
     <script type="text/javascript" src="./gameengine.js"></script>
