--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
     <br />
     <b>ANOTHER</b> game of life implementation. <br />Draw freehand by clicking on the grid, or select some cool shapes from the drop down below and add them by clicking the add button.
     <br /> Add more than one shape to see how they interact! <br />Click <b>Start</b> when you're ready!
-    <input type="button" id="toggle" value="Start"><br />
+    <input type="button" id="toggle" value="Start">
+    <input type="button" id="clear" value="clear"><br /><br />
     <select id="toolSelect">
     <option value="smallinf">Smallest Infinite Growth</option>
     <option value="bryansgoof">Bryan's Goof (ripoff)</option>
     <option value="acorn">Acorn</option>
     </select>
     <input type="button" id="add" value="add">
-    <input type="button" id="clear" value="clear">
-    <title>Game Project Shell</title>
+    <input type="button" id="save" value="Save">
+    <input type="button" id="load" value="Load">
+    <title>Game Of Life (in pretty colors)</title>
     <script type="text/javascript" src="http://24.16.255.56:8888/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="./mapData.js"></script>
     <script type="text/javascript" src="./gameengine.js"></script>
