commented out socket.io usage

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <input type="button" id="save" value="Save">
     <input type="button" id="load" value="Load">
     <title>Game Of Life (in pretty colors)</title>
-    <script type="text/javascript" src="http://24.16.255.56:8888/socket.io/socket.io.js"></script>
+    <!--<script type="text/javascript" src="http://24.16.255.56:8888/socket.io/socket.io.js"></script>-->
     <script type="text/javascript" src="./mapData.js"></script>
     <script type="text/javascript" src="./gameengine.js"></script>
     <script type="text/javascript" src="./map.js"></script>
